# ai-scripts

./: CLAUDE.md  README  flake.nix  result
.github/workflows/: nix.yml
cal-upload/: README  README.md  cal_upload.py  default.nix
cal_upload/: flake.nix
claudemoji/: CLAUDE.md  README.md  build_3mf.py  generate_and_upload.sh  split.py  split_all.sh
claudemoji/device/: notes.md
claudemoji/output/claudehappy/: back.stl  claudehappy.3mf  claudehappy.scad  frame.stl  test_ring.stl
claudemoji/output/claudespinny/: claudespinny.3mf  claudespinny.scad
ffxiv-otp/: Cargo.toml  README.md
ffxiv-otp/src/: main.rs
gradescope-utils/: README.md  gradescope-api.nix  main.py
gradescope-utils/gradescope-api/src/gradescopeapi/classes/_helpers/: _assignment_helpers.py
hitron/: .gitignore  Cargo.toml  README.md  default.nix  modeminfo.py  module.nix  result
hitron/src/: api.rs  dedup.rs  discord.rs  main.rs  monitor.rs
pdfhide/: default.nix  pdfhide.py
reminder/: README.md  default.nix  module.nix  reminder.py  test_tasks.toml
whenisgood/: .gitignore  README.md  flake.nix  parse.py  solve_office_hours.py  userscript.js  whenisgood.py
