[package]
name = "hitron-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
reqwest = { version = "0.12.24", default-features = false, features = ["native-tls", "json", "gzip", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
